// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarComparisonCell render 1`] = `
<div>
  <div
    class="table-responsive table-root bar-comparison-root"
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            class="table-head-title table-column-event-name"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Event Name
            </span>
          </th>
          <th
            class="table-head-title"
          >
            Total Events
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="table-column-event-name"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              View Article
            </span>
          </td>
          <td>
            <div
              class="metric-bar-root breakdown-table-bar"
            >
              <div
                class="bar mr-2 bar-primary bar-default"
                style="width: 100%; background-color: rgb(24, 127, 255);"
              />
              <div
                class="info-wrapper align-items-center d-flex justify-content-between"
              >
                <span>
                  3,367
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`BarComparisonCell render two tables when comparing segment and event 1`] = `
<div>
  <div
    class="table-responsive table-root bar-comparison-root"
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            class="table-head-title table-column-event-name"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              View Article
            </span>
          </th>
          <th
            class="table-head-title"
          >
            Total Events
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="table-column-event-name"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              All Individuals
            </span>
          </td>
          <td>
            <div
              class="metric-bar-root breakdown-table-bar"
            >
              <div
                class="bar mr-2 bar-primary bar-default"
                style="width: 100%; background-color: rgb(24, 127, 255);"
              />
              <div
                class="info-wrapper align-items-center d-flex justify-content-between"
              >
                <span>
                  1,717
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td
            class="table-column-event-name"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Segmented
            </span>
          </td>
          <td>
            <div
              class="metric-bar-root breakdown-table-bar"
            >
              <div
                class="bar mr-2 bar-primary bar-default"
                style="width: 96%; background-color: rgb(75, 155, 255);"
              />
              <div
                class="info-wrapper align-items-center d-flex justify-content-between"
              >
                <span>
                  1,650
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            class="table-head-title table-column-event-name"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              View Article
            </span>
          </th>
          <th
            class="table-head-title"
          >
            Total Events
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="table-column-event-name"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              All Individuals
            </span>
          </td>
          <td>
            <div
              class="metric-bar-root breakdown-table-bar"
            >
              <div
                class="bar mr-2 bar-primary bar-default"
                style="width: 41%; background-color: rgb(49, 190, 136);"
              />
              <div
                class="info-wrapper align-items-center d-flex justify-content-between"
              >
                <span>
                  700
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td
            class="table-column-event-name"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Segmented
            </span>
          </td>
          <td>
            <div
              class="metric-bar-root breakdown-table-bar"
            >
              <div
                class="bar mr-2 bar-primary bar-default"
                style="width: 29%; background-color: rgb(60, 205, 149);"
              />
              <div
                class="info-wrapper align-items-center d-flex justify-content-between"
              >
                <span>
                  500
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
